# mandelbrot

./: README.md  mandelbrot.cabal  stack.yaml
src/: Main.hs
