name:                mandelbrot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/IQubic/mandelbrot#readme
license:             BSD3
license-file:        LICENSE
author:              Avi Caspe
maintainer:          avi.caspe@gmail.com
copyright:           BSD3
category:            Devel
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mandelbrot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, gloss, JuicyPixels, gloss-juicy, microlens-platform
